--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^3.1.2",
     "express": "^4.14.0",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-addons-update": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
