--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "sweetalert-react": "^0.4.4"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
