--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.2",
+    "babel-polyfill": "^6.16.0",
     "body-parser": "^1.15.2",
     "cross-env": "^3.1.2",
     "express": "^4.14.0",
@@ -24,13 +25,17 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-actions": "^0.13.0",
+    "redux-saga": "^0.12.1",
     "sweetalert-react": "^0.4.4"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "nodemon": "^1.11.0",
     "react-hot-loader": "^3.0.0-beta.5",
     "webpack": "^1.13.2",
